--- a/public/Dashboard/Dashboard.html
+++ b/public/Dashboard/Dashboard.html
@@ -104,14 +104,14 @@
       </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard/embreve">
+        <a class="nav-link" href="/dashboard/loja">
           <i class="fas fa-store"></i>
           <span>Loja</span></a>
       </li>
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard/embreve">
+        <a class="nav-link" href="/dashboard/socios">
           <i class="fas fa-handshake"></i>
           <span>Sócios</span></a>
       </li>
@@ -241,62 +241,69 @@
         <!-- End of Topbar -->
 
         <!-- Begin Page Content -->
-        <div class="container-fluid">
+        <div class="container-fluid" style="max-width: 900px;">
 
-          <h class="h2">Manual</h><br><br><br>
+          <div class="text-center my-4">
+            <h class="h1">Site Oficial União Desportiva Mourisquense</h>
+
+            <img src="/static/img/capa.jpg" class="img-fluid w-100 my-3" alt="Responsive image">
+          </div>
+
+          <div class="m-3 mt-5">
+            <h class="h2">Manual</h><br><br>
           
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/proximo" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Próximo Jogo</a> - O utilizador pode fazer a análise do próximo jogo do Mourisquense visto que nesta
-            parte estão inseridas todas as estatísticas de ambas a equipas (UDM e adversário) comparadas, pode
-            também ver qual será o horário e data do jogo.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/proximo" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Próximo Jogo</a> - O utilizador pode fazer a análise do próximo jogo do Mourisquense visto que nesta
+              parte estão inseridas todas as estatísticas de ambas a equipas (UDM e adversário) comparadas, pode
+              também ver qual será o horário e data do jogo.</p>
 
-          <h class="h4">Apostas</h>
+            <h class="h4">Apostas</h>
 
-          <p>Nesta estão introduzidas as categorias que permitem fazer apostas com o objetivo de
-            maximizar os seus pontos, os jogos para breve serão aqui apresentados.</p>
+            <p>Nesta estão introduzidas as categorias que permitem fazer apostas com o objetivo de
+              maximizar os seus pontos, os jogos para breve serão aqui apresentados.</p>
 
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/resultado" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Resultado</a>
-            - Nesta categoria apostasse no resultado ao intervalo e/ou no final do jogo.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/resultado" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Resultado</a>
+              - Nesta categoria apostasse no resultado ao intervalo e/ou no final do jogo.</p>
 
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/inicial" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">11 Inicial</a>
-            - Nesta página o utilizador vai tentar entrar na cabeça do treinador e adivinhar qual será o
-            11 inicial, sendo que umas posições valem mais pontos que outras mais fáceis de prever.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/inicial" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">11 Inicial</a>
+              - Nesta página o utilizador vai tentar entrar na cabeça do treinador e adivinhar qual será o
+              11 inicial, sendo que umas posições valem mais pontos que outras mais fáceis de prever.</p>
 
-          <h class="h4">Tabelas</h>
+            <h class="h4">Tabelas</h>
 
-          <p>Espaço destinado a dados do clube, onde se pode informar e confirmar sobre tudo o que está a
-            acontecer na época presente.</p>
+            <p>Espaço destinado a dados do clube, onde se pode informar e confirmar sobre tudo o que está a
+              acontecer na época presente.</p>
 
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/classificacao" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Classificação</a>
-            - Através de uma tabela da liga em que o Mourisquense está a participar o utilizador
-            pode saber a classificação e estatísticas do UDM, assim como dos seus adversários.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/classificacao" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Classificação</a>
+              - Através de uma tabela da liga em que o Mourisquense está a participar o utilizador
+              pode saber a classificação e estatísticas do UDM, assim como dos seus adversários.</p>
 
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/jogadores" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Jogadores</a>
-            - Lista de todos os jogadores representantes do plantel sénior. Pode também adquirir a
-            informação detalhada de todos estes jogadores.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/jogadores" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Jogadores</a>
+              - Lista de todos os jogadores representantes do plantel sénior. Pode também adquirir a
+              informação detalhada de todos estes jogadores.</p>
 
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/novidades" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Novidades</a>
-            - Nesta página estarão disponíveis notícias do clube, como por exemplo contratações ou
-            o resultado dos jogos. Também lhe é dada a hipótese de gostar e/ou comentar os “Post’s” para que
-            possamos contar com a sua opinião sobre o tema.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/novidades" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Novidades</a>
+              - Nesta página estarão disponíveis notícias do clube, como por exemplo contratações ou
+              o resultado dos jogos. Também lhe é dada a hipótese de gostar e/ou comentar os “Post’s” para que
+              possamos contar com a sua opinião sobre o tema.</p>
 
-          <h class="h4">Clube</h>
+            <h class="h4">Clube</h>
 
-          <p><a class="font-weight-bold">Disponível Em Breve</a>, este espaço será utilizado para atividades relacionadas ao suporte monetário à
-            equipa..</p>
+            <p><a class="font-weight-bold">Disponível Em Breve</a>, este espaço será utilizado para atividades relacionadas ao suporte monetário à
+              equipa..</p>
 
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/embreve" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Loja</a>
-            - Poderá comprar itens que o clube tenha a vender tais como peças de vestuário ou objetos de
-            apoio ao clube “bandeiras”.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/embreve" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Loja</a>
+              - Poderá comprar itens que o clube tenha a vender tais como peças de vestuário ou objetos de
+              apoio ao clube “bandeiras”.</p>
 
-          <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/embreve" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Sócios</a>
-            - Os sócios que queiram atualizar o pagamento das quotas ou os adeptos que queiram se
-            tornar sócios poderão em breve fazê-lo online.</p>
+            <p><a class="h6 font-weight-bold text-secondary" href="/dashboard/embreve" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">Sócios</a>
+              - Os sócios que queiram atualizar o pagamento das quotas ou os adeptos que queiram se
+              tornar sócios poderão em breve fazê-lo online.</p>
 
-          <h class="h4">Acerca de</h>
+            <h class="h4">Acerca de</h>
 
-          <p>Nesta aba poderá ver a <a class="h6 font-weight-bold text-secondary" href="/dashboard/mourisquense" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">história do clube</a> detalhada e com algumas curiosidades, assim como, a
-            <a class="h6 font-weight-bold text-secondary" href="/dashboard/historia" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">história dos criadores</a> deste Web Site.</p>
-
+            <p>Nesta aba poderá ver a <a class="h6 font-weight-bold text-secondary" href="/dashboard/mourisquense" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">história do clube</a> detalhada e com algumas curiosidades, assim como, a
+              <a class="h6 font-weight-bold text-secondary" href="/dashboard/historia" onmouseover="this.style.color='#000'"  onMouseOut="this.style.color='#555'">história dos criadores</a> deste Web Site.</p>
+          </div>
         </div>
         <!-- End Page Content -->
       </div>
