--- a/public/Dashboard/proximo.html
+++ b/public/Dashboard/proximo.html
@@ -104,14 +104,14 @@
       </div>
 
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard/embreve">
+        <a class="nav-link" href="/dashboard/loja">
           <i class="fas fa-store"></i>
           <span>Loja</span></a>
       </li>
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard/embreve">
+        <a class="nav-link" href="/dashboard/socios">
           <i class="fas fa-handshake"></i>
           <span>Sócios</span></a>
       </li>
@@ -288,7 +288,7 @@
               </div>
             </div>
           </div>
-          <div class="container bg-white border">
+          <div class="container bg-white border" style="max-width:900px;">
             <div class="row my-1">
               <div class="col-12 text-center">Posição</div>
               <div class="col-3 text-right">
