--- a/public/Dashboard/Acerca/historia.html
+++ b/public/Dashboard/Acerca/historia.html
@@ -67,12 +67,6 @@
           <span>11 Inicial</span></a>
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" href="/dashboard/historico">
-          <i class="fas fa-fw fa-history"></i>
-          <span>Histórico</span></a>
-      </li>
-
       <!-- Divider -->
       <hr class="sidebar-divider">
 
@@ -99,6 +93,27 @@
         <a class="nav-link" href="/dashboard/novidades">
           <i class="fas fa-fw fa-globe"></i>
           <span>Novidades</span></a>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        Clube
+      </div>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/loja">
+          <i class="fas fa-store"></i>
+          <span>Loja</span></a>
+      </li>
+
+      <!-- Nav Item - Charts -->
+      <li class="nav-item">
+        <a class="nav-link" href="/dashboard/socios">
+          <i class="fas fa-handshake"></i>
+          <span>Sócios</span></a>
       </li>
 
       <!-- Divider -->
